ram_disk & ramfs: Allocate cleared pages.

We need to not expose arbitrary previously-used memory contents
to userspace applications, but this also fixes a bug in that
POSIX specified partial pages in mmaped files should be zero-filled,
and without this, RAMFS did not adhere to that.

Should fix https://github.com/haikuports/haikuports/issues/10463
(which was earlier reported as #18903.)